[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/fonts/font_hud.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.168627, 0.768627, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.141176, 0.101961, 0.509804 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.184314, 0.411765, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0941176, 0.113725, 0.141176, 0.509804 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PainEffect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.988235, 0.117647, 0.00392157, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="AmmoLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.7502
margin_top = -46.3457
margin_right = -13.7502
margin_bottom = -13.3457
custom_fonts/font = SubResource( 1 )
text = "15|30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrenadeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -46.0
margin_right = -114.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 1 )
text = "G1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -95.0
margin_right = 190.0
margin_bottom = -70.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 33.0
percent_visible = false

[node name="EnergyBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -65.0
margin_right = 190.0
margin_bottom = -40.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 33.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
